crates/sgf-core/tests/snapshots/ops_deposits/add_to_a_capital_4_5.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added d_minerals_3 (#16777216) to planet #2
touched: [169]
inverse: RemoveDeposit { deposit: 16777216 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -80125,7 +80125,7 @@
 			entity=1
 			deposits=
 			{
-				440 441 442 443 444 445 446 447 448 449 450 451 452 
+				440 441 442 443 444 445 446 447 448 449 450 451 452 16777216 
 			}
 		}
 		3=
@@ -1076220,7 +1076220,15 @@
 }
 deposit=
 {
-	0=none
+	16777216=
+	{
+		type="d_minerals_3"
+		deposit_holder=
+		{
+			type=0
+			id=2
+		}
+	}
 	1=none
 	2=none
 	3=none
