crates/sgf-core/tests/snapshots/ops_deposits/add_to_a_planet_without_deposits_4_4.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added d_minerals_3 (#16777216) to planet #2
touched: [217]
inverse: RemoveDeposit { deposit: 16777216 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -93552,6 +93552,10 @@
 			}
 			atmosphere_intensity=0.2
 			atmosphere_width=1
+			deposits=
+			{
+				16777216 
+			}
 		}
 		3=
 		{
@@ -1466966,7 +1466970,15 @@
 }
 deposit=
 {
-	0=none
+	16777216=
+	{
+		type="d_minerals_3"
+		deposit_holder=
+		{
+			type=0
+			id=2
+		}
+	}
 	1=none
 	2=none
 	3=none
